# tensorzero

./: .dockerignore  .env.example  .gitignore  .oxfmtrc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .workbench-objective  2025.11.2.md  AGENTS.md  CITATION.cff  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUIDE.md  DOCKERFILE_OPTIMIZATION_ANALYSIS.md  DOCKER_SETUP.md  Dockerfile  INTEGRATION_DEVELOPMENT.md  LICENSE  Makefile.integration  PLAN.md  PR_DESCRIPTION.md  README.md  RELEASE_GUIDE.md  REVIEWING.md  SECURITY.md  SETUP_COMPLETE.md  TODOS.md  artifacthub-repo.yml  ci_failure_context.md  clippy.sh  clippy.toml  deny.toml  dev_setup.sh  docker-compose.dev.yml  docker-compose.yml  example.env  failing_tests.md  (+31 more)
api/: Cargo.toml
api/src/: api.rs  api_util.rs  clickhouse.rs  config_parser.rs  error.rs  function.rs  jsonschema_util.rs  lib.rs  main.rs  minijinja_util.rs  model.rs  observability.rs  testing.rs  variant.rs
api/tests/: common.rs  main.rs
bandits-testing/: .env.example  README.md  docker-compose.yml  environments.py  experiment_config.py  experiment_runner.py  naive_bandits.py  naive_bandits_runner.py  plotting.py  pyproject.toml  quick_test.py  requirements.txt  run_experiment.py  run_experiments.py  run_full_comparison.py  tensorzero_runner.py
bandits-testing/config/: tensorzero.toml
clients/python/: .gitignore  .sqlx  Cargo.toml  DEVELOPER_NOTES.md  README.md  README_STUBS.md  UNSET_USAGE.md  add_double_option_extensions.py  build-openapi-bindings.sh  file_header.py  generate_schema_types.py  generate_stubs.py  post_process_types.py  pyproject.toml  pytest.ini  python-migration-plan.md  requirements.in  requirements.txt  test-no-rebuild.sh  test.sh  test_datapoint_metadata_standalone.py  test_datapoint_metadata_update.py
clients/python-asyncio/: README.md  pyproject.toml
clients/python-deprecated/: README.md  pyproject.toml  requirements.in  requirements.txt
clients/python-pyo3/: CONTRIBUTING.md  Cargo.toml  DEVELOPER_NOTES.md  README.md  README.me  demo.py  demo.sh  pyproject.toml  requirements.in  requirements.txt  test.sh
clients/rust/: Cargo.toml
crates/: Cargo.toml  clippy.toml  deny.toml  rust-toolchain.toml
crates/.cargo/: config.toml
crates/.config/: nextest.toml
crates/.sqlx/: query-0dbe0a02981df8f46cca3cadecfe5b228a4ab099ab58b4d78e5b28853735e920.json  query-1e73eafe2dcbc67bd0af0c670b9cbd33178e524c97ad4e693293443bb3b79c68.json  query-296ef2923571cf68e1b2f926b39d5180c3802ac43ec59d436dc5a45e6a4850a3.json  query-492a2ff55d1cce8f660539e2669f8752b0046b0a4bb25c9989ceacc329486fcc.json  query-4e38a23703a343a33e2146baa1039cd3669b91c39adc562c315b6207d3893e1c.json  query-4e78abd6be2ac9c0beed34a950021899348b664eebeda80ad5cf1cd33466d786.json  query-53da30c2ccfd1ad50e7eaa1d4404e2e58a88880f79fea07b01e5ff36360eb01c.json  query-5a1c86da16fb7777a8789275e94e5a9d8eae8a58a35c9a7ca72d9245eb4b7fe4.json  query-6a3696a3de56d6051d1d47a9bb6748a8d640914b43c1ab07ca5b8e6a0a8ecef3.json  query-97c1ae769f9c03c5eda14cde29d338153023b36becd12a4a1c708b2058e7462a.json  query-a4d2aa2e85389d921b4c1581321838689d73b9496a26b3116bafd0584e500016.json  query-abb1324b349c40b2830e7ebcc703244461e39a260d50991f2ce9479fd80c1440.json  query-bd5104b86e1a04f3b2c0616905af9f72ce35a68cace9cbf9134cfc580e51d9cf.json  query-cd05554b23fc43577847556dadd63ce1d9bc9bcbd0b1d61665abcee866c9fd2a.json  query-ef3ac5744f9313b285f9445ac9d724a987dac480ae28e50ee0a9bcd591e0b540.json  query-f55789b64e7bba86213f6eea4cfc33f1b8a11d58b6ec4eba246af184d8053ca6.json
crates/autopilot-client/: Cargo.toml
crates/autopilot-tools/: Cargo.toml
crates/autopilot-worker/: Cargo.toml
crates/bip39-uuid-substitution/: Cargo.toml
crates/config-applier/: Cargo.toml
crates/durable-tools/: Cargo.toml  README.md
crates/evaluations/: Cargo.toml  Dockerfile
crates/gateway/: Cargo.toml  Dockerfile
crates/generate-openapi-spec/: Cargo.toml
crates/googletest-matchers/: README.md
crates/provider-proxy/: Cargo.toml  Dockerfile
crates/reqwest-sse-stream/: Cargo.toml
crates/target-check/: .rustc_info.json
crates/tensorzero-auth/: Cargo.toml  README.md  build.rs  sqlx.toml
crates/tensorzero-client/: Cargo.toml
crates/tensorzero-config-paths/: Cargo.toml
crates/tensorzero-core/: Cargo.toml
crates/tensorzero-error/: Cargo.toml
crates/tensorzero-http/: Cargo.toml
crates/tensorzero-inference-types/: Cargo.toml
crates/tensorzero-mcp/: Cargo.toml
crates/tensorzero-node/: .gitignore  Cargo.toml  README.md  build-bindings.sh  package.json  tsconfig.json
crates/tensorzero-optimizers/: Cargo.toml
crates/tensorzero-provider-types/: Cargo.toml
crates/tensorzero-provider-wire/: Cargo.toml
crates/tensorzero-providers/: Cargo.toml
crates/tensorzero-python/: .sqlx  Cargo.toml  README.md  generate_schema_types.py  pyproject.toml
crates/tensorzero-stored-config/: AGENTS.md  Cargo.toml  sqlx.toml
crates/tensorzero-ts-types/: Cargo.toml  build.rs
crates/tensorzero-types/: Cargo.toml
crates/tensorzero-types-providers/: Cargo.toml
crates/ts-executor-pool/: Cargo.toml  build.rs
evals/: Cargo.toml  README.md
evals/src/: dataset.rs  helpers.rs  lib.rs  main.rs  stats.rs
evals/tests/: common.rs  tests.rs
evaluations/: Cargo.toml  Dockerfile  README.md  README_regex_evaluator.md  eval_defaults_template.toml
evaluations/examples/: regex_evaluator_example.toml
evaluations/src/: betting_confidence_sequences.rs  cli.rs  confidence_sequence.rs  dataset.rs  helpers.rs  lib.rs  main.rs  sse_events.rs  stats.rs  stopping.rs  topk.rs  types.rs
evaluations/tests/: tests.rs  tests_topk.rs  topk.rs
gateway/: Cargo.toml  Dockerfile  build.rs  tensorzero.toml
gateway/benchmarks/: README.md
optimization-server/: README.md  pyproject.toml  requirements.txt
optimizations-server/: README.md  pyproject.toml  requirements.txt
provider-proxy/: .gitignore  Cargo.toml  Dockerfile  README.md
tensorzero-core/: Cargo.toml  build.rs
tensorzero-internal/: Cargo.toml  build.rs
tensorzero-optimizers/: Cargo.toml  sqlx.toml
write-fixtures/: Cargo.toml  export.sh
(+9014 files in other folders)
