[workspace]
members = [
    "tensorzero-core",
    "tensorzero-core/tests/mock-inference-provider",
    "gateway",
    "ui/app/utils/minijinja",
    "internal/tensorzero-node",
    "clients/rust",
    "clients/python",
    "provider-proxy",
    "evaluations",
    "internal/tensorzero-derive",
    "examples/integrations/cursor/feedback",
]
resolver = "2"

[workspace.package]
version = "2025.7.4"
rust-version = "1.85.0"
license = "Apache-2.0"

[workspace.dependencies]
reqwest = { version = "0.12.22", features = [
    "json",
    "multipart",
    "rustls-tls",
    "http2",
], default-features = false }
serde = { version = "1.0.204", features = ["derive", "rc"] }
serde_path_to_error = "0.1.17"
uuid = { version = "1.17.0", features = ["serde", "v7"] }
serde_json = { version = "1.0.134", features = ["preserve_order"] }
secrecy = { version = "0.10.2", features = ["serde"] }
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
toml = "0.9.2"
reqwest-eventsource = "0.6.0"
async-stream = "0.3.5"
http = "1.3.1"
tokio-stream = "0.1.15"
tokio = { version = "1.46.1", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
pyo3 = { version = "0.24.2", features = ["experimental-async", "abi3-py39"] }
axum = { version = "0.8", features = ["macros"] }
anyhow = "1.0.98"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
clap = { version = "4.5.41", features = ["derive"] }
futures = "0.3.30"
lazy_static = { version = "1.5.0" }
url = "2.5.4"
serde-untagged = "0.1.7"
object_store = { version = "0.12.2", features = ["serde", "aws", "gcp"] }
rand = "0.9.1"
ts-rs = { version = "11.0.1", features = [
    "serde-compat",
    "serde-json-impl",
    "uuid-impl",
    "url-impl",
    "no-serde-warnings",
] }
chrono = { version = "0.4.41", features = ["serde"] }
git2 = { version = "0.20.2", default-features = false }
tracing-opentelemetry-instrumentation-sdk = { version = "0.29.0", features = [
    "tracing_level_info",
] }
tower-http = { version = "0.6.6", features = ["trace"] }
mime = { git = "https://github.com/hyperium/mime", rev = "1ef137c7358fc64e07c8a640e4e9ba2a784b7f7d", features = [
    "serde1",
] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
allow_attributes = "deny"
dbg_macro = "deny"
default_trait_access = "deny"
expect_used = "deny"
if_not_else = "deny"
manual_string_new = "deny"
match_bool = "deny"
needless_raw_string_hashes = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
redundant_closure_for_method_calls = "deny"
todo = "deny"
trivially_copy_pass_by_ref = "deny"
unimplemented = "deny"
uninlined_format_args = "deny"
unreachable = "deny"
unwrap_used = "deny"

[profile.performance]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[profile.release.package.minijinja-bindings]
opt-level = "s"
