[workspace]
members = [
    "tensorzero-core",
    "tensorzero-core/tests/mock-inference-provider",
    "tensorzero-core/tests/load/rate-limit-load-test",
    "tensorzero-core/tests/load/feedback",
    "gateway",
    "internal/tensorzero-node",
    "clients/rust",
    "clients/python",
    "provider-proxy",
    "evaluations",
    "tensorzero-optimizers",
    "internal/tensorzero-derive",
    "internal/tensorzero-auth",
    "internal/minijinja-utils",
    "examples/integrations/cursor/feedback",
]
resolver = "2"

[workspace.package]
version = "2025.11.6"
rust-version = "1.88.0"
license = "Apache-2.0"

[workspace.dependencies]
reqwest = { version = "0.12.24", features = [
    "json",
    "multipart",
    "rustls-tls",
    "http2",
], default-features = false }
serde = { version = "1.0.204", features = ["derive", "rc"] }
serde_path_to_error = "0.1.17"
uuid = { version = "1.18.1", features = ["serde", "v7"] }
serde_json = { version = "1.0.143", features = ["preserve_order"] }
serde_with = "3.16.0"
secrecy = { version = "0.10.2", features = ["serde"] }
toml = { version = "0.9.8", features = ["preserve_order"] }
reqwest-eventsource = "0.6.0"
async-stream = "0.3.5"
async-trait = "0.1.89"
http = "1.3.1"
tokio-stream = "0.1.15"
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
pyo3 = { version = "0.26.0", features = ["experimental-async", "abi3-py310"] }
axum = { version = "0.8", features = ["macros", "http2"] }
anyhow = "1.0.99"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
clap = { version = "4.5.51", features = ["derive"] }
futures = "0.3.30"
lazy_static = { version = "1.5.0" }
minijinja = { version = "2.12.0", features = [
    "loader",
    "debug",
    "json",
    "loop_controls",
    "builtins",
    "unstable_machinery",
] }
url = "2.5.4"
# TODO - unpin when https://github.com/EmbarkStudios/cargo-deny/issues/803 is fixed
google-cloud-auth = "=1.1.0"
serde-untagged = "0.1.8"
object_store = { version = "0.12.2", features = ["serde", "aws", "gcp"] }
rand = "0.9.1"
ts-rs = { version = "11.1.0", features = [
    "serde-compat",
    "serde-json-impl",
    "uuid-impl",
    "url-impl",
    "chrono-impl",
    "no-serde-warnings",
] }
pin-project = "1.1.10"
chrono = { version = "0.4.41", features = ["serde"] }
git2 = { version = "0.20.2", default-features = false }
tracing-opentelemetry-instrumentation-sdk = { version = "0.32.1", features = [
    "tracing_level_info",
] }
tower-http = { version = "0.6.6", features = ["trace"] }
mime = { git = "https://github.com/hyperium/mime", rev = "1ef137c7358fc64e07c8a640e4e9ba2a784b7f7d", features = [
    "serde1",
] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "migrate",
    "chrono",
    "uuid",
] }
rlt = "0.2.1"
metrics-exporter-prometheus = { version = "0.17.2", features = [
    "http-listener",
], default-features = false }
schemars = "1.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
allow_attributes = "deny"
dbg_macro = "deny"
disallowed-types = "deny"
# NB: Slowly making progress towards:
# doc_markdown = "deny"
expect_used = "deny"
explicit_iter_loop = "deny"
if_not_else = "deny"
ignored_unit_patterns = "deny"
inconsistent_struct_constructor = "deny"
manual_assert = "deny"
manual_string_new = "deny"
match_bool = "deny"
match_wildcard_for_single_variants = "deny"
missing_panics_doc = "deny"
needless_raw_string_hashes = "deny"
or_fun_call = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
semicolon-if-nothing-returned = "deny"
todo = "deny"
trivially_copy_pass_by_ref = "deny"
unimplemented = "deny"
uninlined_format_args = "deny"
unnecessary_wraps = "deny"
unreachable = "deny"
unused_self = "deny"
unwrap_used = "deny"
large_futures = "deny"

# The following pedantic lints are explicitly set to "allow" to give authors discretion on their use.
default_trait_access = "allow"
match_same_arms = "allow"
must_use_candidate = "allow"
single_match_else = "allow"

# This lint cannot be fixed with 'cargo fmt', and we don't currently generate docs
doc_lazy_continuation = "allow"

[profile.dev]
debug = "limited"

[profile.performance]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
