[package]
name = "api"
version = "0.1.0"
edition = "2021"


[features]
integration_tests = []


[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
bytes = "1.6.1"
derive_builder = "0.20.0"
futures = "0.3.30"
jsonschema = "0.18.0"
reqwest = { version = "0.12.5", features=["rustls-tls", "json"], default-features=false }
reqwest-eventsource = "0.6.0"
secrecy = "0.8.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_path_to_error = "0.1.16"
sha2 = "0.10.8"
tokio = { version = "1.38.1", features = ["full"] }
tokio-stream = "0.1.15"
toml = "0.8.15"
tracing = { version = "0.1.40", features = ["log", "release_max_level_debug"] }
uuid = { version = "1.10.0", features = ["v7", "serde"] }
