[package]
name = "evals"
version = "0.1.0"
edition = "2021"

[dependencies]
tensorzero = { path = "../clients/rust" }
tensorzero-internal = { path = "../tensorzero-internal" }
clap = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tensorzero-internal = { path = "../tensorzero-internal", features = [
    "e2e_tests",
] }

[lints]
workspace = true

[features]
# Forward these features to 'tensorzero-internal', so that our embedded
# client can recognize things like the `dummy` provider
e2e_tests = ["tensorzero-internal/e2e_tests"]
batch_tests = ["tensorzero-internal/batch_tests"]
default = []
