[package]
name = "evals"
version = "0.1.0"
edition = "2021"

[[test]]
name = "e2e"
path = "tests/tests.rs"
required-features = ["e2e_tests"]

[dependencies]
tensorzero = { path = "../clients/rust" }
tensorzero-internal = { path = "../tensorzero-internal" }
clap = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tensorzero = { path = "../clients/rust", features = ["e2e_tests"] }

[lints]
workspace = true


[features]
# Forward these features to 'tensorzero', so that our embedded
# client can recognize things like the `dummy` provider
e2e_tests = ["tensorzero/e2e_tests"]
batch_tests = ["tensorzero/batch_tests"]
default = []
