[package]
name = "evaluations"
version.workspace = true
edition = "2021"

[[test]]
name = "e2e"
path = "tests/tests.rs"
required-features = ["e2e_tests"]

[dependencies]
tensorzero = { path = "../clients/rust" }
tensorzero-internal = { path = "../tensorzero-internal" }
clap = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
indicatif = "0.17.11"
dirs = "6.0.0"
dirs-next = "2.0.0"

[dev-dependencies]
tensorzero = { path = "../clients/rust" }

[lints]
workspace = true

[features]
default = []
# Forward this feature to 'evaluations', so that our
# tests can recognize things like the `dummy` provider
e2e_tests = ["tensorzero/e2e_tests"]
