[package]
name = "evaluations"
version.workspace = true
edition = "2021"
rust-version.workspace = true
license.workspace = true

[[test]]
name = "e2e"
path = "tests/tests.rs"
required-features = ["e2e_tests"]

[dependencies]
tensorzero = { path = "../clients/rust" }
tensorzero-core = { path = "../tensorzero-core" }
clap = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
indicatif = "0.18.1"

[dev-dependencies]
tensorzero = { path = "../clients/rust" }

[lints]
workspace = true

[features]
default = []
# Forward this feature to 'evaluations', so that our
# tests can recognize things like the `dummy` provider
e2e_tests = ["tensorzero/e2e_tests"]
