[package]
name = "evaluations"
version.workspace = true
edition = "2021"
rust-version.workspace = true
license.workspace = true

[[test]]
name = "e2e"
path = "tests/tests.rs"
required-features = ["e2e_tests"]

[dependencies]
tensorzero-core = { path = "../tensorzero-core" }
clap = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
indicatif = "0.18.2"

[dev-dependencies]
tensorzero-core = { path = "../tensorzero-core", features = ["e2e_tests"] }

[lints]
workspace = true

[features]
default = []
# Forward this feature to 'tensorzero-core', so that our
# tests can recognize things like the `dummy` provider
e2e_tests = ["tensorzero-core/e2e_tests"]
