[project]
name = "optimization_server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "clickhouse_connect",
    "fastapi[standard]",
    "httpx>=0.28.1",
    "minijinja",
    "openai",
    "pydantic",
    "tensorzero",
    "tiktoken>=0.9.0",
    "typing-extensions>=4.13.1",
    "uuid_utils",
]

[dependency-groups]
dev = ["pyright", "ruff", "pytest-asyncio", "pytest-xdist", "pytest"]

[tool.uv.sources]
tensorzero = { path = "${PROJECT_ROOT}/../../clients/python", editable = true }

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
