[package]
name = "provider-proxy"
version = "0.1.0"
rust-version.workspace = true
edition = "2021"
license.workspace = true

[[test]]
name = "e2e"
path = "tests/e2e/tests.rs"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
clap = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
http-serde-ext = "1.0.2"
hyper = { version = "1.7.0", features = ["client", "server", "http1", "http2"] }
hyper-util = "0.1.15"
moka = { workspace = true }
pin-project = { workspace = true }
rcgen = "0.14.2"
reqwest.workspace = true
rustls = "0.23.29"
serde = { workspace = true }
serde_json.workspace = true
sha2 = { workspace = true }
tokio.workspace = true
tokio-rustls = "0.26.1"
tracing = { workspace = true }
tracing-subscriber.workspace = true
tempfile = { workspace = true }


[lints]
workspace = true

[dev-dependencies]
axum.workspace = true
rand = { workspace = true }
