[package]
name = "tensorzero-core"
version.workspace = true
rust-version.workspace = true
edition = "2021"
license.workspace = true
exclude = ["tests/", "fixtures/"]


[features]
# Forward this feature to the Rust client, so that the embedded gateway
# has the `e2e_tests` feature enabled when we run our e2e tests
e2e_tests = ["tensorzero/e2e_tests"]
optimization_tests = ["e2e_tests"]
pyo3 = ["dep:pyo3"]

[[test]]
name = "e2e"
path = "tests/e2e/tests.rs"
required-features = ["e2e_tests"]

# Runs live optimizations tests (which start actual SFT jobs and poll them)
[[test]]
name = "optimization-live"
path = "tests/optimization/live_tests.rs"
required-features = ["optimization_tests"]

# Runs mock optimizations tests (which use a mock-inference-provider server)
[[test]]
name = "optimization-mock"
path = "tests/optimization/mock_tests.rs"
required-features = ["e2e_tests"]

[lints]
workspace = true


[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = { version = "1.113.0", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
    "default-https-client",
] }
aws-smithy-types = { version = "1.3.3", features = [
    "serde-deserialize",
    "serde-serialize",
] }
aws-types = "1.3.6"
axum = { workspace = true }
backon = { version = "1.6.0", features = ["tokio-sleep"] }
blake3 = "1.8.2"
bytes = "1.6.1"
chrono = { workspace = true }
derive_builder = "0.20.0"
futures = { workspace = true }
futures-core = "0.3.30"
hex = "0.4.3"
itertools = "0.14.0"
jsonschema = "0.33.0"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
lazy_static = { workspace = true }
metrics = "0.24.2"
metrics-exporter-prometheus = { workspace = true }
minijinja = { version = "2.12.0", features = [
    "loader",
    "debug",
    "json",
    "loop_controls",
    "builtins",
] }
object_store = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde-untagged = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
serde_path_to_error = { workspace = true }
sha2 = "0.10.9"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
tokio = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
tracing.workspace = true
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "fmt",
    "json",
] }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true }
tensorzero-derive = { path = "../internal/tensorzero-derive" }
clap = { workspace = true }
aws-sdk-sagemakerruntime = { version = "1.91.0", features = [
    "behavior-version-latest",
    "rt-tokio",
    "default-https-client",
], default-features = false }
aws-smithy-runtime-api = "1.9.1"
eventsource-stream = "0.2.3"
scoped-tls = "1.0.1"
opentelemetry_sdk = "0.31.0"
opentelemetry = "0.31.0"
tracing-opentelemetry = "0.32.0"
opentelemetry-otlp = { version = "0.31.0", features = [
    "grpc-tonic",
    "tls",
    "tls-roots",
] }
opentelemetry-semantic-conventions = "0.31.0"
init-tracing-opentelemetry = "0.33.0"
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-opentelemetry-instrumentation-sdk = { workspace = true, features = [
    "http",
] }
tower-http = { workspace = true }
tower-layer = "0.3.3"
pyo3 = { workspace = true, optional = true }
google-cloud-auth = "1.1.0"
mime = { workspace = true }
mime_guess = "2.0.5"
indexmap = "2.12.0"
base64 = "0.22.1"
thiserror = "2.0.16"
globset = "0.4.18"
walkdir = "2.5.0"
enum-map = "2.7.3"
tokio-util = { version = "0.7.17", features = ["rt"] }
ts-rs = { workspace = true }
moka = { version = "0.12.10", features = ["sync"] }
tonic = { version = "0.14.2", default-features = false }
sqlx = { workspace = true }
sqlx_alpha = { package = "sqlx", version = "0.9.0-alpha.1", features = ["sqlx-toml", "postgres", "runtime-tokio", "chrono"] }
pin-project = { workspace = true }
once_cell = "1.21.3"
clarabel = { version = "0", default-features = false, features = ["serde"] }
arc-swap = "1.7.1"
infer = "0.19.0"
urlencoding = "2.1.3"
http-body = "1.0.1"
tensorzero-auth = { path = "../internal/tensorzero-auth" }
git2 = { workspace = true }
tempfile = { version = "3.21.0" }

[dev-dependencies]
tempfile = "3.21.0"
rand_distr = "0.5.1"
tensorzero = { path = "../clients/rust", features = ["e2e_tests"] }
evaluations = { path = "../evaluations" }
paste = "1.0.15"
base64 = "0.22.1"
aws-credential-types = { version = "1.2.2", features = [
    "hardcoded-credentials",
] }
http-body-util = "0.1.3"
image = "0.25.6"
gag = "1.0.0"
log = "0.4.28"
tracing-core = "0.1.34"
mockall = "0.13"

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }
